Skeleton layout done with some placeholder text

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <body>
 <div id="container">
   <div id="stop_picker">
+    <div class="lineToggle lineN">N</div>
+    <div class="lineToggle lineL">L</div>
+    <div class="lineToggle line6">6</div>
     <ul id="n_line">
       <li class="stops">Times Square</li>
       <li class="stops">34th</li>
@@ -33,10 +36,13 @@
     </ul>
   </div>
   <div id="choices">
-    
+    <div id="outboundStart">Times Square</div>
+    <div id="outboundFinish">Times Square</div>
+    <div id="returnStart">Times Square</div>
+    <div id="returnFinish">Times Square</div>
   </div>
   <div id="results">
-    
+    5 stops
   </div>
 </div>
 </body>
