Well... now it stores station choices

--- a/index.html
+++ b/index.html
@@ -7,39 +7,39 @@
 </head>
 <body>
 <div id="container">
-  <div id="stop_picker">
+  <div id="stopPicker">
     <div class="lineToggle lineN">N</div>
     <div class="lineToggle lineL">L</div>
     <div class="lineToggle line6">6</div>
-    <ul id="n_line">
-      <li class="stops">Times Square</li>
-      <li class="stops">34th</li>
-      <li class="stops">28th</li>
-      <li class="stops">23rd</li>
-      <li class="stops">Union Square</li>
-      <li class="stops">Astor Place</li>
+    <ul id="n_line" class="linemap">
+      <li class="nLineStops">Times Square</li>
+      <li class="nLineStops">34th</li>
+      <li class="nLineStops">28th</li>
+      <li class="nLineStops">23rd</li>
+      <li class="nLineStops">Union Square</li>
+      <li class="nLineStops">Astor Place</li>
     </ul>
-    <ul id="l_line">
-      <li class="stops">8th</li>
-      <li class="stops">6th</li>
-      <li class="stops">Union Square</li>
-      <li class="stops">3rd</li>
-      <li class="stops">1st</li>
+    <ul id="l_line" class="linemap">
+      <li class="lLineStops">8th</li>
+      <li class="lLineStops">6th</li>
+      <li class="lLineStops">Union Square</li>
+      <li class="lLineStops">3rd</li>
+      <li class="lLineStops">1st</li>
     </ul>
-    <ul id="6_line">
-      <li class="stops">Grand Central</li>
-      <li class="stops">33rd</li>
-      <li class="stops">28th</li>
-      <li class="stops">23rd</li>
-      <li class="stops">Union Square</li>
-      <li class="stops">Astor Place</li>
+    <ul id="six_line" class="linemap">
+      <li class="sixLineStops">Grand Central</li>
+      <li class="sixLineStops">33rd</li>
+      <li class="sixLineStops">28th</li>
+      <li class="sixLineStops">23rd</li>
+      <li class="sixLineStops">Union Square</li>
+      <li class="sixLineStops">Astor Place</li>
     </ul>
   </div>
   <div id="choices">
-    <div id="outboundStart">Times Square</div>
-    <div id="outboundFinish">Times Square</div>
-    <div id="returnStart">Times Square</div>
-    <div id="returnFinish">Times Square</div>
+    <div id="step1"></div>
+    <div id="step2"></div>
+    <div id="step3"></div>
+    <div id="step4"></div>
   </div>
   <div id="results">
     5 stops
