Backing up before complete design overhaul

--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
 <div id="container">
   <div id="stopPicker">
     <div class="lineToggle lineN">N</div>
-    <div class="lineToggle lineL">L</div>
-    <div class="lineToggle line6">6</div>
     <ul id="n_line" class="linemap">
       <li class="nLineStops">Times Square</li>
       <li class="nLineStops">34th</li>
@@ -19,6 +17,7 @@
       <li class="nLineStops">Union Square</li>
       <li class="nLineStops">Astor Place</li>
     </ul>
+    <div class="lineToggle line6">6</div>
     <ul id="l_line" class="linemap">
       <li class="lLineStops">8th</li>
       <li class="lLineStops">6th</li>
@@ -26,6 +25,7 @@
       <li class="lLineStops">3rd</li>
       <li class="lLineStops">1st</li>
     </ul>
+    <div class="lineToggle lineL">L</div>
     <ul id="six_line" class="linemap">
       <li class="sixLineStops">Grand Central</li>
       <li class="sixLineStops">33rd</li>
@@ -36,10 +36,10 @@
     </ul>
   </div>
   <div id="choices">
-    <div id="step1"></div>
+<!--     <div id="step1"></div>
     <div id="step2"></div>
     <div id="step3"></div>
-    <div id="step4"></div>
+    <div id="step4"></div> -->
   </div>
   <div id="results">
     5 stops
