Huge restructuring. Groundwork set for the logic to finally be added

--- a/index.html
+++ b/index.html
@@ -10,39 +10,34 @@
   <div id="stopPicker">
     <div class="lineToggle lineN">N</div>
     <ul id="n_line" class="linemap">
-      <li class="nLineStops">Times Square</li>
-      <li class="nLineStops">34th</li>
-      <li class="nLineStops">28th</li>
-      <li class="nLineStops">23rd</li>
-      <li class="nLineStops">Union Square</li>
-      <li class="nLineStops">Astor Place</li>
-    </ul>
-    <div class="lineToggle line6">6</div>
-    <ul id="l_line" class="linemap">
-      <li class="lLineStops">8th</li>
-      <li class="lLineStops">6th</li>
-      <li class="lLineStops">Union Square</li>
-      <li class="lLineStops">3rd</li>
-      <li class="lLineStops">1st</li>
+      <li class="nLine">Times Square</li>
+      <li class="nLine">34th</li>
+      <li class="nLine">28th</li>
+      <li class="nLine">23rd</li>
+      <li class="nLine">Union Square</li>
+      <li class="nLine">Astor Place</li>
     </ul>
     <div class="lineToggle lineL">L</div>
-    <ul id="six_line" class="linemap">
-      <li class="sixLineStops">Grand Central</li>
-      <li class="sixLineStops">33rd</li>
-      <li class="sixLineStops">28th</li>
-      <li class="sixLineStops">23rd</li>
-      <li class="sixLineStops">Union Square</li>
-      <li class="sixLineStops">Astor Place</li>
+    <ul id="l_line" class="linemap">
+      <li class="lLine">8th</li>
+      <li class="lLine">6th</li>
+      <li class="lLine">Union Square</li>
+      <li class="lLine">3rd</li>
+      <li class="lLine">1st</li>
     </ul>
+    <div class="lineToggle line6">6</div>
+    <ul id="six_line" class="linemap">
+      <li class="sixLine">Grand Central</li>
+      <li class="sixLine">33rd</li>
+      <li class="sixLine">28th</li>
+      <li class="sixLine">23rd</li>
+      <li class="sixLine">Union Square</li>
+      <li class="sixLine">Astor Place</li>
+    </ul>
+    <div id="counter">
+    </div>
   </div>
   <div id="choices">
-<!--     <div id="step1"></div>
-    <div id="step2"></div>
-    <div id="step3"></div>
-    <div id="step4"></div> -->
-  </div>
-  <div id="results">
-    5 stops
   </div>
 </div>
 </body>
