Changed layout again. Answer DHTML without stop counter done(?)

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
 <div id="container">
   <div id="stopPicker">
-    <div class="lineToggle lineN">N</div>
-    <ul id="n_line" class="linemap">
+    <ul class="linemap">
+    <div class="lineLabel lineN">N</div>
       <li class="nLine">Times Square</li>
       <li class="nLine">34th</li>
       <li class="nLine">28th</li>
@@ -17,16 +17,16 @@
       <li class="nLine">Union Square</li>
       <li class="nLine">Astor Place</li>
     </ul>
-    <div class="lineToggle lineL">L</div>
-    <ul id="l_line" class="linemap">
+    <ul class="linemap">
+    <div class="lineLabel lineL">L</div>
       <li class="lLine">8th</li>
       <li class="lLine">6th</li>
       <li class="lLine">Union Square</li>
       <li class="lLine">3rd</li>
       <li class="lLine">1st</li>
     </ul>
-    <div class="lineToggle line6">6</div>
-    <ul id="six_line" class="linemap">
+    <ul class="linemap">
+    <div class="lineLabel line6">6</div>
       <li class="sixLine">Grand Central</li>
       <li class="sixLine">33rd</li>
       <li class="sixLine">28th</li>
@@ -34,8 +34,6 @@
       <li class="sixLine">Union Square</li>
       <li class="sixLine">Astor Place</li>
     </ul>
-    <div id="counter">
-    </div>
   </div>
   <div id="choices">
   </div>
