Fixed station typo

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <li class="nLine">28th</li>
       <li class="nLine">23rd</li>
       <li class="nLine">Union Square</li>
-      <li class="nLine">Astor Place</li>
+      <li class="nLine">8th</li>
     </ul>
     <ul class="linemap">
     <div class="lineLabel lineL">L</div>
